<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewNik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nik"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewTglLahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_lahir"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewNoRek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomor_rekening"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewNamaBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_bank"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewTmptLahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempat_lahir"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewNoHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomor_hp"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewJK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin1"
        android:textSize="18sp"
        android:padding="8dp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hapuss" />
    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit" />
</LinearLayout>